--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
           <div class="user-bar-wrapper">
             <a class="header-link auth-link" href="#">Войти</a>
             <a class="header-link comparasing-link" href="#">Сравнить</a>
-            <button class="header-link basket-link" type="button">Корзина</botton>
+            <button class="header-link basket-link" type="button">Корзина</button>
           </div>
         </div>
         <nav class="navigation">
@@ -111,12 +111,12 @@
                 <a class="button-link button-about" href="#">Подробнее</a>
                 <dl class="slider-features-list">
                   <div class="slider-features-item">
-                    <dd class="slider-features-value">800 м</dd>
                     <dt class="slider-features-name">Дальность полета</dt>
+                    <dd class="slider-features-value">800 м</dd>
                   </div>
                   <div class="slider-features-item">
-                    <dd class="slider-features-value">50 м</dd>
                     <dt class="slider-features-name">Радиус поражения</dt>
+                    <dd class="slider-features-value">50 м</dd>
                   </div>
                 </dl>
               </div>
@@ -136,8 +136,8 @@
                 <a class="button-link button-about" href="#">Подробнее</a>
                 <dl class="slider-features-list">
                   <div class="slider-features-item">
-                    <dd class="slider-features-value">48 часов</dd>
                     <dt class="slider-features-name">Без подзарядки</dt>
+                    <dd class="slider-features-value">48 часов</dd>
                   </div>
                 </dl>
               </div>
@@ -156,16 +156,16 @@
                 <a class="button-link button-about" href="#">Подробнее</a>
                 <dl class="slider-features-list">
                   <div class="slider-features-item">
-                    <dd class="slider-features-value">8.5 м</dd>
                     <dt class="slider-features-name">Длина палки</dt>
+                    <dd class="slider-features-value">8.5 м</dd>
                   </div>
                   <div class="slider-features-item">
-                    <dd class="slider-features-value">5 кг</dd>
                     <dt class="slider-features-name">Вес палки</dt>
+                    <dd class="slider-features-value">5 кг</dd>
                   </div>
                   <div class="slider-features-item">
-                    <dd class="slider-features-value">Карбон</dd>
                     <dt class="slider-features-name">Материал</dt>
+                    <dd class="slider-features-value">Карбон</dd>
                   </div>
                 </dl>
               </div>
