--- a/catalog.html
+++ b/catalog.html
@@ -5,6 +5,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta name="description" content="Всякие девайсы по разумной цене." />
     <title>Интернет-магазин "Девайс"</title>
     <link rel="stylesheet" href="styles/styles.css" />
     <link rel="icon" type="image/x-icon" href="favicon.ico" />
@@ -14,9 +15,9 @@
   <body>
     <div class="page-wrapper">
       <div class="container page-header-wrapper">
-        <header class="page-header">
+        <header class="page-header catalog-header">
           <a class="header-logo" href="index.html">
-            <img src="images/svg/logo-header.svg" alt="Логотип сайта Девайс." width="145" height="36" />
+            <img src="images/svg/logo-header.svg" alt="Логотип сайта Девайс." width="145" height="37" />
           </a>
           <div class="page-header-user-bar">
             <form class="search-form" action="https://echo.htmlacademy.ru/" method="post">
@@ -25,13 +26,52 @@
                 <input class="header-search" type="search" name="header-search" id="header-search"
                   placeholder="Текст поиска" />
               </div>
-              <button class="button-search" type="button">Найти</button>
+              <button class="button-search" type="submit">Найти</button>
             </form>
             <div class="user-bar-wrapper">
-              <div class="auth-link-wrapper"><a class="header-link auth-link" href="#">Коля Петухов</a></div>
+              <div class="auth-link-wrapper">
+                <a class="header-link auth-link" href="#">Коля Петухов</a>
+              </div>
               <a class="header-link exit-link" href="#">Выйти</a>
               <a class="header-link comparison-link" href="#">Сравнить</a>
-              <button class="header-link basket-link" type="button">Корзина</button>
+              <div class="basket-container">
+                <button class="header-link basket-link" type="button">
+                  Корзина
+                </button>
+                <div class="basket-tooltip">
+                  <ul class="basket-list">
+                    <li class="basket-item">
+                      <a class="basket-item-link" href="#">
+                        <img class="basket-item-img" src="images/catalog-product-1.jpg" alt="Селфи-палка для любителей."
+                          width="39" height="43" />
+                        <span class="basket-item-title">
+                          Любительская<br />селфи-палка
+                        </span>
+                      </a>
+                      <button class="basket-item-delete">
+                        <span class="visually-hidden">Удалить товар из корзины.</span>
+                      </button>
+                    </li>
+                    <li class="basket-item">
+                      <a class="basket-item-link" href="#">
+                        <img class="basket-item-img" src="images/catalog-product-2.jpg" alt="Селфи-палка для любителей."
+                          width="39" height="43" />
+                        <span class="basket-item-title">
+                          Профессиональная<br />селфи-палка
+                        </span>
+                      </a>
+                      <button class="basket-item-delete">
+                        <span class="visually-hidden">Удалить товар из корзины.</span>
+                      </button>
+                    </li>
+                  </ul>
+                  <div class="basket-summary">
+                    <p class="basket-summary-text count">Товаров: 2</p>
+                    <p class="basket-summary-text total">Сумма: 2000 ₽</p>
+                  </div>
+                  <a class="basket-tooltip-link" href="#">Открыть корзину</a>
+                </div>
+              </div>
             </div>
           </div>
           <nav class="navigation">
@@ -48,7 +88,9 @@
                     </a>
                   </li>
                   <li class="menu-sublist-item">
-                    <span class="menu-sublist-link is-active"> Моноподы для селфи </span>
+                    <span class="menu-sublist-link is-active">
+                      Моноподы для селфи
+                    </span>
                   </li>
                   <li class="menu-sublist-item">
                     <a class="menu-sublist-link" href="#"> Экшн-камеры </a>
@@ -96,7 +138,7 @@
               <a class="breadcrumbs-link" href="#">Каталог товаров</a>
             </li>
             <li class="breadcrumbs-item">
-              <span class="breadcrumbs-link">Моноподы для селфи</span>
+              <span class="breadcrumbs-link breadcrumbs-link-current">Моноподы для селфи</span>
             </li>
           </ul>
         </section>
@@ -130,7 +172,7 @@
                   </div>
                 </div>
               </fieldset>
-              <fieldset class="catalog-filter-group">
+              <fieldset class="catalog-filter-group color-filter-group">
                 <legend class="catalog-subtitle">Цвет</legend>
                 <ul class="catalog-filter-list">
                   <li class="catalog-filter-item">
@@ -173,14 +215,14 @@
               <fieldset class="catalog-filter-group filter-group-down">
                 <legend class="catalog-subtitle">Bluetooth</legend>
                 <ul class="catalog-filter-list">
-                  <li class="catalog-filter-item">
+                  <li class="catalog-filter-item radio-item">
                     <label class="control">
                       <input class="visually-hidden control-input-radio" type="radio" name="bluetooth" value="yes"
                         checked="" /><span class="control-radio"></span>
                       <span class="control-label">Есть</span>
                     </label>
                   </li>
-                  <li class="catalog-filter-item">
+                  <li class="catalog-filter-item radio-item">
                     <label class="control">
                       <input class="visually-hidden control-input-radio" type="radio" name="bluetooth"
                         value="no" /><span class="control-radio"></span>
@@ -215,12 +257,15 @@
                 </div>
               </div>
               <div class="card-product-container">
-                <!--Для метки NEW на тег li повесить класс new-product-->
+                <!--Для метки NEW на тег a повесить класс new-product-->
                 <ul class="card-product-list">
                   <li class="card-product-item">
                     <a class="card-product-link" href="#">
-                      <img class="product-img" src="images/catalog-product-1.jpg" alt="Селфи-палка с телефоном."
-                        width="360" height="380" />
+                      <div class="product-img">
+                        <img src="images/catalog-product-1.jpg" alt="Селфи-палка с телефоном." width="360"
+                          height="380" />
+                        <span class="button-link product-about">Подробнее</span>
+                      </div>
                       <div class="product-text-wrapper">
                         <h3 class="product-title">
                           Любительская<br />
@@ -228,26 +273,29 @@
                         </h3>
                         <span class="product-price">500 ₽</span>
                       </div>
-                      <span class="button-link product-about">Подробнее</span>
                     </a>
                   </li>
                   <li class="card-product-item">
                     <a class="card-product-link" href="#">
-                      <img class="product-img" src="images/catalog-product-2.jpg" alt="Селфи-палка модель A1."
-                        width="360" height="380" />
+                      <div class="product-img">
+                        <img src="images/catalog-product-2.jpg" alt="Селфи-палка модель A1." width="360" height="380" />
+                        <span class="button-link product-about">Подробнее</span>
+                      </div>
                       <div class="product-text-wrapper">
                         <h3 class="product-title">
                           Профессиональная селфи-палка
                         </h3>
                         <span class="product-price">1 500 ₽</span>
                       </div>
-                      <span class="button-link product-about">Подробнее</span>
                     </a>
                   </li>
                   <li class="card-product-item">
                     <a class="card-product-link" href="#">
-                      <img class="product-img" src="images/catalog-product-3.jpg" alt="Селфи-палка с гидрозащитой."
-                        width="360" height="380" />
+                      <div class="product-img">
+                        <img src="images/catalog-product-3.jpg" alt="Селфи-палка с гидрозащитой." width="360"
+                          height="380" />
+                        <span class="button-link product-about">Подробнее</span>
+                      </div>
                       <div class="product-text-wrapper">
                         <h3 class="product-title">
                           Непотопляемая<br />
@@ -255,26 +303,27 @@
                         </h3>
                         <span class="product-price">2 500 ₽</span>
                       </div>
-                      <span class="button-link product-about">Подробнее</span>
                     </a>
                   </li>
                   <li class="card-product-item">
                     <a class="card-product-link" href="#">
-                      <img class="product-img" src="images/catalog-product-4.jpg" alt="Криповатая селфи-палка."
-                        width="360" height="380" />
+                      <div class="product-img">
+                        <img src="images/catalog-product-4.jpg" alt="Криповатая селфи-палка." width="360"
+                          height="380" />
+                        <span class="button-link product-about">Подробнее</span>
+                      </div>
                       <div class="product-text-wrapper">
                         <h3 class="product-title">
                           Селфи-палка &#171;Следуй за мной&#187;
                         </h3>
                         <span class="product-price">1 500 ₽</span>
                       </div>
-                      <span class="button-link product-about">Подробнее</span>
                     </a>
                   </li>
                 </ul>
                 <a class="product-button" href="#">Загрузить ещё</a>
                 <div class="pagination-container">
-                  <a class="pagination-button" href="#">Назад</a>
+                  <a class="pagination-button pagination-button-prev" href="#">Назад</a>
                   <ul class="pagination-list">
                     <li class="pagination-item">
                       <span class="pagination-link is-active">1</span>
@@ -286,13 +335,13 @@
                       <a class="pagination-link" href="#">3</a>
                     </li>
                     <li class="pagination-item">
-                      <span class="pagination-link">...</span>
+                      <span class="pagination-link pagination-link-divider">...</span>
                     </li>
                     <li class="pagination-item">
                       <a class="pagination-link" href="#">15</a>
                     </li>
                   </ul>
-                  <a class="pagination-button" href="#">Вперед</a>
+                  <a class="pagination-button pagination-button-next" href="#">Вперёд</a>
                 </div>
               </div>
             </div>
@@ -356,40 +405,29 @@
             <a class="page-footer-logo" href="https://htmlacademy.ru/">
               <span class="visually-hidden">Сайт HTML академии.</span>
               <svg width="115" height="33" viewBox="0 0 115 33" xmlns="http://www.w3.org/2000/svg">
-                <path d="M0 12.9V15.5H2.5V12.9H0Z"/>
+                <path d="M0 12.9V15.5H2.5V12.9H0Z" />
                 <path
-                  d="M11.6 4.5C10 4.5 8.8 5.2 8 6.2H7.9V0H5.9V15.5H7.9V10.2C7.9 8.1 9.2 6.6 11.2 6.6C13 6.6 14.1 8 14.1 9.8V15.5H16.1V9.4C16.2 6.4 14.3 4.5 11.6 4.5Z"
-                  />
+                  d="M11.6 4.5C10 4.5 8.8 5.2 8 6.2H7.9V0H5.9V15.5H7.9V10.2C7.9 8.1 9.2 6.6 11.2 6.6C13 6.6 14.1 8 14.1 9.8V15.5H16.1V9.4C16.2 6.4 14.3 4.5 11.6 4.5Z" />
                 <path
-                  d="M26.6 4.8H21.8V1.1H19.8V4.9H17.9V6.9H19.8V12.9C19.8 14.6 20.8 15.6 22.5 15.6H26.6V13.6H22.9C22.2 13.6 21.8 13.2 21.8 12.5V6.8H26.6V4.8Z"
-                   />
+                  d="M26.6 4.8H21.8V1.1H19.8V4.9H17.9V6.9H19.8V12.9C19.8 14.6 20.8 15.6 22.5 15.6H26.6V13.6H22.9C22.2 13.6 21.8 13.2 21.8 12.5V6.8H26.6V4.8Z" />
                 <path
-                  d="M41.1 4.6C39.5 4.6 38.2 5.4 37.6 6.7H37.5C36.9 5.5 35.7 4.6 34.1 4.6C32.7 4.6 31.6 5.4 31 6.4H30.9V4.8H29V15.4H31V10C31 8 32 6.5 33.6 6.5C35.1 6.5 36 7.5 36 9.1V15.4H38V9.8C38 7.4 39.4 6.5 40.6 6.5C42.1 6.5 43 7.5 43 9.1V15.4H45V8.9C45.1 6.4 43.6 4.6 41.1 4.6Z"
-                   />
+                  d="M41.1 4.6C39.5 4.6 38.2 5.4 37.6 6.7H37.5C36.9 5.5 35.7 4.6 34.1 4.6C32.7 4.6 31.6 5.4 31 6.4H30.9V4.8H29V15.4H31V10C31 8 32 6.5 33.6 6.5C35.1 6.5 36 7.5 36 9.1V15.4H38V9.8C38 7.4 39.4 6.5 40.6 6.5C42.1 6.5 43 7.5 43 9.1V15.4H45V8.9C45.1 6.4 43.6 4.6 41.1 4.6Z" />
                 <path
-                  d="M47.8 12.7C47.8 14.4 48.8 15.4 50.6 15.4H52.6V13.4H50.9C50.2 13.4 49.8 13 49.8 12.3V0H47.8V12.7Z"
-                   />
+                  d="M47.8 12.7C47.8 14.4 48.8 15.4 50.6 15.4H52.6V13.4H50.9C50.2 13.4 49.8 13 49.8 12.3V0H47.8V12.7Z" />
                 <path
-                  d="M28.9 19.7C28 18.6 26.7 17.9 25 17.9C21.9 17.9 19.6 20.2 19.6 23.5C19.6 26.8 21.9 29.1 25 29.1C26.8 29.1 28 28.3 28.8 27.2H28.9V28.8H30.9V18.2H28.9V19.7ZM25.3 27.1C23.1 27.1 21.7 25.5 21.7 23.5C21.7 21.5 23.1 19.9 25.3 19.9C27.5 19.9 28.9 21.5 28.9 23.5C28.9 25.4 27.5 27.1 25.3 27.1Z"
-                   />
+                  d="M28.9 19.7C28 18.6 26.7 17.9 25 17.9C21.9 17.9 19.6 20.2 19.6 23.5C19.6 26.8 21.9 29.1 25 29.1C26.8 29.1 28 28.3 28.8 27.2H28.9V28.8H30.9V18.2H28.9V19.7ZM25.3 27.1C23.1 27.1 21.7 25.5 21.7 23.5C21.7 21.5 23.1 19.9 25.3 19.9C27.5 19.9 28.9 21.5 28.9 23.5C28.9 25.4 27.5 27.1 25.3 27.1Z" />
                 <path
-                  d="M44.2 22C43.7 19.6 41.6 17.9 38.8 17.9C35.4 17.9 33.2 20.4 33.2 23.5C33.2 26.6 35.4 29.1 38.8 29.1C41.6 29.1 43.7 27.3 44.2 24.9H42.1C41.7 26.2 40.4 27.2 38.8 27.2C36.6 27.2 35.2 25.6 35.2 23.6C35.2 21.6 36.6 20 38.8 20C40.4 20 41.6 21 42.1 22.2H44.2V22Z"
-                   />
+                  d="M44.2 22C43.7 19.6 41.6 17.9 38.8 17.9C35.4 17.9 33.2 20.4 33.2 23.5C33.2 26.6 35.4 29.1 38.8 29.1C41.6 29.1 43.7 27.3 44.2 24.9H42.1C41.7 26.2 40.4 27.2 38.8 27.2C36.6 27.2 35.2 25.6 35.2 23.6C35.2 21.6 36.6 20 38.8 20C40.4 20 41.6 21 42.1 22.2H44.2V22Z" />
                 <path
-                  d="M55.1 19.7C54.2 18.6 52.9 17.9 51.2 17.9C48.1 17.9 45.8 20.2 45.8 23.5C45.8 26.8 48.1 29.1 51.2 29.1C53 29.1 54.2 28.3 55 27.2H55.1V28.8H57.1V18.2H55.1V19.7ZM51.5 27.1C49.3 27.1 47.9 25.5 47.9 23.5C47.9 21.5 49.3 19.9 51.5 19.9C53.7 19.9 55.1 21.5 55.1 23.5C55.1 25.4 53.6 27.1 51.5 27.1Z"
-                   />
+                  d="M55.1 19.7C54.2 18.6 52.9 17.9 51.2 17.9C48.1 17.9 45.8 20.2 45.8 23.5C45.8 26.8 48.1 29.1 51.2 29.1C53 29.1 54.2 28.3 55 27.2H55.1V28.8H57.1V18.2H55.1V19.7ZM51.5 27.1C49.3 27.1 47.9 25.5 47.9 23.5C47.9 21.5 49.3 19.9 51.5 19.9C53.7 19.9 55.1 21.5 55.1 23.5C55.1 25.4 53.6 27.1 51.5 27.1Z" />
                 <path
-                  d="M68.7 19.8C67.8 18.7 66.5 17.9 64.8 17.9C61.7 17.9 59.4 20.2 59.4 23.5C59.4 26.8 61.6 29.1 64.8 29.1C66.5 29.1 67.8 28.3 68.6 27.3H68.7V28.8H70.7V13.4H68.7V19.8ZM65.1 27.1C62.9 27.1 61.5 25.5 61.5 23.5C61.5 21.5 62.9 19.9 65.1 19.9C67.3 19.9 68.7 21.5 68.7 23.5C68.6 25.5 67.2 27.1 65.1 27.1Z"
-                  />
+                  d="M68.7 19.8C67.8 18.7 66.5 17.9 64.8 17.9C61.7 17.9 59.4 20.2 59.4 23.5C59.4 26.8 61.6 29.1 64.8 29.1C66.5 29.1 67.8 28.3 68.6 27.3H68.7V28.8H70.7V13.4H68.7V19.8ZM65.1 27.1C62.9 27.1 61.5 25.5 61.5 23.5C61.5 21.5 62.9 19.9 65.1 19.9C67.3 19.9 68.7 21.5 68.7 23.5C68.6 25.5 67.2 27.1 65.1 27.1Z" />
                 <path
-                  d="M78.3 17.9C75 17.9 72.8 20.4 72.8 23.5C72.8 26.5 74.9 29.1 78.3 29.1C80.8 29.1 82.8 27.8 83.5 25.5H81.4C80.9 26.5 79.8 27.1 78.4 27.1C76.5 27.1 75.1 25.8 75 24.2H83.8C84 20.6 81.8 17.9 78.3 17.9ZM78.3 19.8C80 19.8 81.3 20.8 81.6 22.4H75.1C75.4 20.9 76.6 19.8 78.3 19.8Z"
-                   />
+                  d="M78.3 17.9C75 17.9 72.8 20.4 72.8 23.5C72.8 26.5 74.9 29.1 78.3 29.1C80.8 29.1 82.8 27.8 83.5 25.5H81.4C80.9 26.5 79.8 27.1 78.4 27.1C76.5 27.1 75.1 25.8 75 24.2H83.8C84 20.6 81.8 17.9 78.3 17.9ZM78.3 19.8C80 19.8 81.3 20.8 81.6 22.4H75.1C75.4 20.9 76.6 19.8 78.3 19.8Z" />
                 <path
-                  d="M98.2 17.9C96.6 17.9 95.3 18.7 94.6 19.9H94.5C93.9 18.7 92.7 17.9 91.1 17.9C89.7 17.9 88.6 18.6 88 19.7V18.2H86.1V28.8H88.1V23.4C88.1 21.4 89.1 20 90.7 19.9C92.2 19.9 93.1 20.9 93.1 22.5V28.8H95.1V23.2C95.1 20.8 96.5 19.9 97.7 19.9C99.2 19.9 100.1 20.9 100.1 22.5V28.8H102.1V22.3C102.2 19.7 100.7 17.9 98.2 17.9Z"
-                   />
+                  d="M98.2 17.9C96.6 17.9 95.3 18.7 94.6 19.9H94.5C93.9 18.7 92.7 17.9 91.1 17.9C89.7 17.9 88.6 18.6 88 19.7V18.2H86.1V28.8H88.1V23.4C88.1 21.4 89.1 20 90.7 19.9C92.2 19.9 93.1 20.9 93.1 22.5V28.8H95.1V23.2C95.1 20.8 96.5 19.9 97.7 19.9C99.2 19.9 100.1 20.9 100.1 22.5V28.8H102.1V22.3C102.2 19.7 100.7 17.9 98.2 17.9Z" />
                 <path
-                  d="M109.4 27L105.8 18.1H103.6L108.4 29.7C108.1 30.6 107.7 30.9 106.7 30.9H104.2V32.9H106.7C108.5 32.9 109.5 32.1 110.2 30.3L114.9 18.1H112.8L109.4 27Z"
-                   />
+                  d="M109.4 27L105.8 18.1H103.6L108.4 29.7C108.1 30.6 107.7 30.9 106.7 30.9H104.2V32.9H106.7C108.5 32.9 109.5 32.1 110.2 30.3L114.9 18.1H112.8L109.4 27Z" />
               </svg>
             </a>
           </div>
