--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta name="description" content="Всякие девайсы по разумной цене." />
     <title>Интернет-магазин "Девайс"</title>
     <link rel="stylesheet" href="styles/styles.css" />
     <link rel="icon" type="image/x-icon" href="favicon.ico" />
@@ -16,43 +17,60 @@
       <div class="container">
         <header class="page-header">
           <span class="header-logo">
-            <img src="images/svg/logo-header.svg" alt="Логотип сайта Девайс." width="145" height="36" />
+            <img src="images/svg/logo-header.svg" alt="Логотип сайта Девайс." width="145" height="37" />
           </span>
           <div class="page-header-user-bar">
             <form class="search-form" action="https://echo.htmlacademy.ru/" method="post">
               <label class="visually-hidden" for="header-search">Поиск по сайту.</label>
               <div class="header-search-wrapper">
                 <input class="header-search" type="search" name="header-search" id="header-search"
-                  placeholder="Текст поиска"/>
+                  placeholder="Текст поиска" />
               </div>
               <button class="button-search" type="button">Найти</button>
             </form>
             <div class="user-bar-wrapper">
-              <div class="auth-link-wrapper"><a class="header-link auth-link" href="#">Войти</a></div>
+              <div class="auth-link-wrapper">
+                <a class="header-link auth-link" href="#">Войти</a>
+              </div>
               <a class="header-link comparison-link" href="#">Сравнить</a>
-                <div class="basket-container">
-                  <button class="header-link basket-link" type="button">Корзина</button>
-                  <div class="basket-tooltip">
-                    <h2 class="visually-hidden">Корзина.</h2>
-                    <ul class="basket-list">
-                      <li class="basket-item">
-                        <img class="basket-item-img" src="images/catalog-product-1.jpg" alt="Селфи-палка для любителей." width="39px" height="43px">
-                        <h3 class="basket-item-title">Любительская селфи-палка</h3>
-                        <button class="basket-item-delete"><span class="visually-hidden">Удалить товар из корзины.</span></button>
-                      </li>
-                      <li class="basket-item">
-                        <img class="basket-item-img" src="images/catalog-product-2.jpg" alt="Селфи-палка для любителей." width="39px" height="43px">
-                        <h3 class="basket-item-title">Профессиональная селфи-палка</h3>
-                        <button class="basket-item-delete"><span class="visually-hidden">Удалить товар из корзины.</span></button>
-                      </li>
-                    </ul>
-                    <div class="basket-summary">
-                      <p class="basket-summary-text count">Товаров: 2</p>
-                      <p class="basket-summary-text total">Сумма: 2000 ₽</p>
-                    </div>
-                    <a class="basket-tooltip-link" href="#">Открыть корзину</a>
+              <div class="basket-container">
+                <button class="header-link basket-link" type="button">
+                  Корзина
+                </button>
+                <div class="basket-tooltip">
+                  <ul class="basket-list">
+                    <li class="basket-item">
+                      <a class="basket-item-link" href="#">
+                        <img class="basket-item-img" src="images/catalog-product-1.jpg" alt="Селфи-палка для любителей."
+                          width="39" height="43" />
+                        <span class="basket-item-title">
+                          Любительская<br />селфи-палка
+                        </span>
+                      </a>
+                      <button class="basket-item-delete">
+                        <span class="visually-hidden">Удалить товар из корзины.</span>
+                      </button>
+                    </li>
+                    <li class="basket-item">
+                      <a class="basket-item-link" href="#">
+                        <img class="basket-item-img" src="images/catalog-product-2.jpg" alt="Селфи-палка для любителей."
+                          width="39" height="43" />
+                        <span class="basket-item-title">
+                          Профессиональная<br />селфи-палка
+                        </span>
+                      </a>
+                      <button class="basket-item-delete">
+                        <span class="visually-hidden">Удалить товар из корзины.</span>
+                      </button>
+                    </li>
+                  </ul>
+                  <div class="basket-summary">
+                    <p class="basket-summary-text count">Товаров: 2</p>
+                    <p class="basket-summary-text total">Сумма: 2000 ₽</p>
                   </div>
+                  <a class="basket-tooltip-link" href="#">Открыть корзину</a>
                 </div>
+              </div>
             </div>
           </div>
           <nav class="navigation">
@@ -123,10 +141,15 @@
             </button>
           </div>
           <div class="slider-pagination">
-            <button class="slides-radio is-active" type="button"><span class="visually-hidden">1
-                слайд</span></button>
-            <button class="slides-radio" type="button"><span class="visually-hidden">2 слайд</span></button>
-            <button class="slides-radio" type="button"><span class="visually-hidden">3 слайд</span></button>
+            <button class="slides-radio is-active" type="button">
+              <span class="visually-hidden">1 слайд</span>
+            </button>
+            <button class="slides-radio" type="button">
+              <span class="visually-hidden">2 слайд</span>
+            </button>
+            <button class="slides-radio" type="button">
+              <span class="visually-hidden">3 слайд</span>
+            </button>
           </div>
           <div class="slider-item is-active">
             <img class="slider-image" src="images/device-1.png" alt="Квадрокоптер." width="560" height="560" />
@@ -176,13 +199,13 @@
           <div class="slider-item">
             <img class="slider-image" src="images/device-3.png" alt="Селфи-палка." width="560" height="560" />
             <div class="slider-desc-wrapper">
-              <a class="slider-number">03</a>
+              <span class="slider-number">03</span>
               <p class="page-title slider-slogan">
                 Делай селфи, как&nbsp;Бен&nbsp;Стиллер!
               </p>
               <p class="slider-text">
-                Самая длинная палка для селфи доступна в нашем магазине.
-                Восемь (Восемь, Карл!) метров длиной и весом всего 5 кг.
+                Самая длинная палка для селфи доступна в нашем магазине. Восемь
+                (Восемь, Карл!) метров длиной и весом всего 5 кг.
               </p>
               <a class="button-link button-about" href="#">Подробнее</a>
               <dl class="slider-features-list">
@@ -283,7 +306,9 @@
         </section>
         <section class="container special-delivery">
           <h2 class="visually-hidden">Заказ редких товаров.</h2>
-          <button class="special-delivery-link" type="button">Доставим редкий товар под заказ</button>
+          <button class="special-delivery-link" type="button">
+            Доставим редкий товар под заказ
+          </button>
         </section>
         <div class="container contacts-wrapper">
           <section class="about-us">
@@ -340,6 +365,7 @@
             </div>
             <div class="newsletter-form-wrapper">
               <form class="newsletter-form" action="https://echo.htmlacademy.ru/" method="post">
+                <!--Для состояния ошибки в input добавить класс is-invalid-->
                 <input class="field" type="email" name="newsletter-email" placeholder="Ваш e-mail" required=""
                   aria-label="Ваш e-mail" />
                 <button class="newsletter-button" type="submit">
@@ -408,45 +434,99 @@
             <a class="page-footer-logo" href="https://htmlacademy.ru/">
               <span class="visually-hidden">Сайт HTML академии.</span>
               <svg width="115" height="33" viewBox="0 0 115 33" xmlns="http://www.w3.org/2000/svg">
-                <path d="M0 12.9V15.5H2.5V12.9H0Z"  />
+                <path d="M0 12.9V15.5H2.5V12.9H0Z" />
                 <path
-                  d="M11.6 4.5C10 4.5 8.8 5.2 8 6.2H7.9V0H5.9V15.5H7.9V10.2C7.9 8.1 9.2 6.6 11.2 6.6C13 6.6 14.1 8 14.1 9.8V15.5H16.1V9.4C16.2 6.4 14.3 4.5 11.6 4.5Z"
-                   />
+                  d="M11.6 4.5C10 4.5 8.8 5.2 8 6.2H7.9V0H5.9V15.5H7.9V10.2C7.9 8.1 9.2 6.6 11.2 6.6C13 6.6 14.1 8 14.1 9.8V15.5H16.1V9.4C16.2 6.4 14.3 4.5 11.6 4.5Z" />
                 <path
-                  d="M26.6 4.8H21.8V1.1H19.8V4.9H17.9V6.9H19.8V12.9C19.8 14.6 20.8 15.6 22.5 15.6H26.6V13.6H22.9C22.2 13.6 21.8 13.2 21.8 12.5V6.8H26.6V4.8Z"
-                   />
+                  d="M26.6 4.8H21.8V1.1H19.8V4.9H17.9V6.9H19.8V12.9C19.8 14.6 20.8 15.6 22.5 15.6H26.6V13.6H22.9C22.2 13.6 21.8 13.2 21.8 12.5V6.8H26.6V4.8Z" />
                 <path
-                  d="M41.1 4.6C39.5 4.6 38.2 5.4 37.6 6.7H37.5C36.9 5.5 35.7 4.6 34.1 4.6C32.7 4.6 31.6 5.4 31 6.4H30.9V4.8H29V15.4H31V10C31 8 32 6.5 33.6 6.5C35.1 6.5 36 7.5 36 9.1V15.4H38V9.8C38 7.4 39.4 6.5 40.6 6.5C42.1 6.5 43 7.5 43 9.1V15.4H45V8.9C45.1 6.4 43.6 4.6 41.1 4.6Z"
-                  />
+                  d="M41.1 4.6C39.5 4.6 38.2 5.4 37.6 6.7H37.5C36.9 5.5 35.7 4.6 34.1 4.6C32.7 4.6 31.6 5.4 31 6.4H30.9V4.8H29V15.4H31V10C31 8 32 6.5 33.6 6.5C35.1 6.5 36 7.5 36 9.1V15.4H38V9.8C38 7.4 39.4 6.5 40.6 6.5C42.1 6.5 43 7.5 43 9.1V15.4H45V8.9C45.1 6.4 43.6 4.6 41.1 4.6Z" />
                 <path
-                  d="M47.8 12.7C47.8 14.4 48.8 15.4 50.6 15.4H52.6V13.4H50.9C50.2 13.4 49.8 13 49.8 12.3V0H47.8V12.7Z"
-                   />
+                  d="M47.8 12.7C47.8 14.4 48.8 15.4 50.6 15.4H52.6V13.4H50.9C50.2 13.4 49.8 13 49.8 12.3V0H47.8V12.7Z" />
                 <path
-                  d="M28.9 19.7C28 18.6 26.7 17.9 25 17.9C21.9 17.9 19.6 20.2 19.6 23.5C19.6 26.8 21.9 29.1 25 29.1C26.8 29.1 28 28.3 28.8 27.2H28.9V28.8H30.9V18.2H28.9V19.7ZM25.3 27.1C23.1 27.1 21.7 25.5 21.7 23.5C21.7 21.5 23.1 19.9 25.3 19.9C27.5 19.9 28.9 21.5 28.9 23.5C28.9 25.4 27.5 27.1 25.3 27.1Z"
-                   />
+                  d="M28.9 19.7C28 18.6 26.7 17.9 25 17.9C21.9 17.9 19.6 20.2 19.6 23.5C19.6 26.8 21.9 29.1 25 29.1C26.8 29.1 28 28.3 28.8 27.2H28.9V28.8H30.9V18.2H28.9V19.7ZM25.3 27.1C23.1 27.1 21.7 25.5 21.7 23.5C21.7 21.5 23.1 19.9 25.3 19.9C27.5 19.9 28.9 21.5 28.9 23.5C28.9 25.4 27.5 27.1 25.3 27.1Z" />
                 <path
-                  d="M44.2 22C43.7 19.6 41.6 17.9 38.8 17.9C35.4 17.9 33.2 20.4 33.2 23.5C33.2 26.6 35.4 29.1 38.8 29.1C41.6 29.1 43.7 27.3 44.2 24.9H42.1C41.7 26.2 40.4 27.2 38.8 27.2C36.6 27.2 35.2 25.6 35.2 23.6C35.2 21.6 36.6 20 38.8 20C40.4 20 41.6 21 42.1 22.2H44.2V22Z"
-                  />
+                  d="M44.2 22C43.7 19.6 41.6 17.9 38.8 17.9C35.4 17.9 33.2 20.4 33.2 23.5C33.2 26.6 35.4 29.1 38.8 29.1C41.6 29.1 43.7 27.3 44.2 24.9H42.1C41.7 26.2 40.4 27.2 38.8 27.2C36.6 27.2 35.2 25.6 35.2 23.6C35.2 21.6 36.6 20 38.8 20C40.4 20 41.6 21 42.1 22.2H44.2V22Z" />
                 <path
-                  d="M55.1 19.7C54.2 18.6 52.9 17.9 51.2 17.9C48.1 17.9 45.8 20.2 45.8 23.5C45.8 26.8 48.1 29.1 51.2 29.1C53 29.1 54.2 28.3 55 27.2H55.1V28.8H57.1V18.2H55.1V19.7ZM51.5 27.1C49.3 27.1 47.9 25.5 47.9 23.5C47.9 21.5 49.3 19.9 51.5 19.9C53.7 19.9 55.1 21.5 55.1 23.5C55.1 25.4 53.6 27.1 51.5 27.1Z"
-                  />
+                  d="M55.1 19.7C54.2 18.6 52.9 17.9 51.2 17.9C48.1 17.9 45.8 20.2 45.8 23.5C45.8 26.8 48.1 29.1 51.2 29.1C53 29.1 54.2 28.3 55 27.2H55.1V28.8H57.1V18.2H55.1V19.7ZM51.5 27.1C49.3 27.1 47.9 25.5 47.9 23.5C47.9 21.5 49.3 19.9 51.5 19.9C53.7 19.9 55.1 21.5 55.1 23.5C55.1 25.4 53.6 27.1 51.5 27.1Z" />
                 <path
-                  d="M68.7 19.8C67.8 18.7 66.5 17.9 64.8 17.9C61.7 17.9 59.4 20.2 59.4 23.5C59.4 26.8 61.6 29.1 64.8 29.1C66.5 29.1 67.8 28.3 68.6 27.3H68.7V28.8H70.7V13.4H68.7V19.8ZM65.1 27.1C62.9 27.1 61.5 25.5 61.5 23.5C61.5 21.5 62.9 19.9 65.1 19.9C67.3 19.9 68.7 21.5 68.7 23.5C68.6 25.5 67.2 27.1 65.1 27.1Z"
-                   />
+                  d="M68.7 19.8C67.8 18.7 66.5 17.9 64.8 17.9C61.7 17.9 59.4 20.2 59.4 23.5C59.4 26.8 61.6 29.1 64.8 29.1C66.5 29.1 67.8 28.3 68.6 27.3H68.7V28.8H70.7V13.4H68.7V19.8ZM65.1 27.1C62.9 27.1 61.5 25.5 61.5 23.5C61.5 21.5 62.9 19.9 65.1 19.9C67.3 19.9 68.7 21.5 68.7 23.5C68.6 25.5 67.2 27.1 65.1 27.1Z" />
                 <path
-                  d="M78.3 17.9C75 17.9 72.8 20.4 72.8 23.5C72.8 26.5 74.9 29.1 78.3 29.1C80.8 29.1 82.8 27.8 83.5 25.5H81.4C80.9 26.5 79.8 27.1 78.4 27.1C76.5 27.1 75.1 25.8 75 24.2H83.8C84 20.6 81.8 17.9 78.3 17.9ZM78.3 19.8C80 19.8 81.3 20.8 81.6 22.4H75.1C75.4 20.9 76.6 19.8 78.3 19.8Z"
-                  />
+                  d="M78.3 17.9C75 17.9 72.8 20.4 72.8 23.5C72.8 26.5 74.9 29.1 78.3 29.1C80.8 29.1 82.8 27.8 83.5 25.5H81.4C80.9 26.5 79.8 27.1 78.4 27.1C76.5 27.1 75.1 25.8 75 24.2H83.8C84 20.6 81.8 17.9 78.3 17.9ZM78.3 19.8C80 19.8 81.3 20.8 81.6 22.4H75.1C75.4 20.9 76.6 19.8 78.3 19.8Z" />
                 <path
-                  d="M98.2 17.9C96.6 17.9 95.3 18.7 94.6 19.9H94.5C93.9 18.7 92.7 17.9 91.1 17.9C89.7 17.9 88.6 18.6 88 19.7V18.2H86.1V28.8H88.1V23.4C88.1 21.4 89.1 20 90.7 19.9C92.2 19.9 93.1 20.9 93.1 22.5V28.8H95.1V23.2C95.1 20.8 96.5 19.9 97.7 19.9C99.2 19.9 100.1 20.9 100.1 22.5V28.8H102.1V22.3C102.2 19.7 100.7 17.9 98.2 17.9Z"
-                  />
+                  d="M98.2 17.9C96.6 17.9 95.3 18.7 94.6 19.9H94.5C93.9 18.7 92.7 17.9 91.1 17.9C89.7 17.9 88.6 18.6 88 19.7V18.2H86.1V28.8H88.1V23.4C88.1 21.4 89.1 20 90.7 19.9C92.2 19.9 93.1 20.9 93.1 22.5V28.8H95.1V23.2C95.1 20.8 96.5 19.9 97.7 19.9C99.2 19.9 100.1 20.9 100.1 22.5V28.8H102.1V22.3C102.2 19.7 100.7 17.9 98.2 17.9Z" />
                 <path
-                  d="M109.4 27L105.8 18.1H103.6L108.4 29.7C108.1 30.6 107.7 30.9 106.7 30.9H104.2V32.9H106.7C108.5 32.9 109.5 32.1 110.2 30.3L114.9 18.1H112.8L109.4 27Z"
-                   />
+                  d="M109.4 27L105.8 18.1H103.6L108.4 29.7C108.1 30.6 107.7 30.9 106.7 30.9H104.2V32.9H106.7C108.5 32.9 109.5 32.1 110.2 30.3L114.9 18.1H112.8L109.4 27Z" />
               </svg>
             </a>
           </div>
         </div>
       </footer>
+    </div>
+    <div class="modal-container">
+      <div class="modal">
+        <button class="modal-close-button" type="button">
+          <span class="visually-hidden">Закрыть.</span>
+        </button>
+        <section class="modal-content">
+          <h2 class="page-title modal-title">Доставка под заказ</h2>
+          <form class="delivery-form" action="https://echo.htmlacademy.ru/" method="post">
+            <!-- Чтобы появился текст ошибки к классу .field-container добавить класс .is-invalid -->
+            <div class="field-container">
+              <label class="field-label" for="name"><span class="name-field">Ваше имя:</span></label>
+              <input class="modal-input name-input" type="text" name="name" id="name" placeholder="Введите имя"
+                required="" />
+              <span class="field-help field-text"> Добавьте имя </span>
+              <span class="field-error field-text"> Интересное у вас имя </span>
+            </div>
+            <!-- Чтобы появился текст ошибки к классу .field-container добавить класс .is-invalid -->
+            <div class="field-container">
+              <label class="field-label" for="email"><span class="name-field">Ваш e-mail:</span></label>
+              <input class="modal-input email-input" type="email" name="email" id="email" placeholder="Введите email"
+                required="" />
+              <span class="field-help field-text"> Добавьте адрес почты </span>
+              <span class="field-error field-text"> Забавный у вас адрес </span>
+            </div>
+            <div class="field-container">
+              <label class="field-label" for="order"><span class="name-field">Что нужно привезти:</span></label>
+              <input class="modal-input order-input" type="text" name="order" id="order" placeholder="В свобоной форме"
+                required="" />
+            </div>
+            <!-- Чтобы появилась ошибка к классу .field-container добавить класс .is-invalid -->
+            <div class="field-container number-container">
+              <div class="count-field">
+                <div class="label-count-container">
+                  <label class="field-label" for="count"><span
+                      class="name-field name-count-field">Количество:</span></label>
+                  <div class="count-info">
+                    <span class="visually-hidden">Подсказка.</span>
+                    <div class="modal-tooltip">
+                      <p class="tooltip-content">
+                        Постараемся найти, сколько нужно. Привезём сколько
+                        получится по требованиям к&nbsp;провозу багажа.
+                      </p>
+                    </div>
+                  </div>
+                </div>
+                <div class="number-field">
+                  <button class="button-number button-minus" type="button">
+                    <span class="visually-hidden">Уменшить число товаров на один.</span></button><button
+                    class="button-number button-plus" type="button">
+                    <span class="visually-hidden">Увеличить число товаров на один.</span>
+                  </button>
+                  <input class="modal-input count-input" type="number" id="count" name="count" placeholder="1"
+                    required="" value="1" />
+                </div>
+              </div>
+            </div>
+            <div class="submit-container">
+              <button class="button-link modal-submit" type="submit">
+                Отправить
+              </button>
+            </div>
+          </form>
+        </section>
+      </div>
     </div>
     <script src="js/index.js"></script>
   </body>
