Исправления после обсуждения с наставником

--- a/catalog.html
+++ b/catalog.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="ru">
 
   <head>
     <meta charset="UTF-8" />
@@ -17,6 +17,7 @@
       <div class="container page-header-wrapper">
         <header class="page-header catalog-header">
           <a class="header-logo" href="index.html">
+            <span class="visually-hidden">Переход на главный сайт.</span>
             <img src="images/svg/logo-header.svg" alt="Логотип сайта Девайс." width="145" height="37" />
           </a>
           <div class="page-header-user-bar">
@@ -351,7 +352,7 @@
       <footer class="page-footer">
         <div class="container">
           <a class="footer-logo" href="/index.html">
-            <span class="visually-hidden">Логотип интернет магазина "Девайс".</span>
+            <span class="visually-hidden">Переход на главный сайт.</span>
             <svg width="145" height="37" viewBox="0 0 145 37" xmlns="http://www.w3.org/2000/svg">
               <path
                 d="M27.2188 0.388916V35.6889H19.6135V33.2889C17.9124 35.1889 15.5107 36.3889 12.1084 36.3889C5.5038 36.3889 0 30.5889 0 23.0889C0 15.5889 5.5038 9.78892 12.1084 9.78892C15.5107 9.78892 18.0124 10.9889 19.6135 12.8889V0.388916H27.2188ZM19.6135 23.0889C19.6135 19.2889 17.1118 16.8889 13.6094 16.8889C10.107 16.8889 7.60524 19.2889 7.60524 23.0889C7.60524 26.8889 10.107 29.2889 13.6094 29.2889C17.1118 29.1889 19.6135 26.8889 19.6135 23.0889Z" />
@@ -403,7 +404,7 @@
               </li>
             </ul>
             <a class="page-footer-logo" href="https://htmlacademy.ru/">
-              <span class="visually-hidden">Сайт HTML академии.</span>
+              <span class="visually-hidden">Переход на сайт HTML академии.</span>
               <svg width="115" height="33" viewBox="0 0 115 33" xmlns="http://www.w3.org/2000/svg">
                 <path d="M0 12.9V15.5H2.5V12.9H0Z" />
                 <path
